--- a/client/style.css
+++ b/client/style.css
@@ -297,11 +297,20 @@ input {
   color: gold;
 }
 
+/* Player Styles - Optimized for smooth animations */
+.player {
+  will-change: transform;
+  transform: translate3d(0, 0, 0); /* Force hardware acceleration */
+  backface-visibility: hidden; /* Improve performance */
+  -webkit-backface-visibility: hidden;
+}
+
 /* Player Stickman Styles */
 .stickman {
   position: relative;
   width: 100%;
   height: 100%;
+  will-change: transform;
 }
 
 .head {
